<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="heroes_menu">Heroes</string>
    <string name="items_menu">Items</string>
    <string name="build_menu">HeroBuild Pro</string>
    <string name="news_menu">News</string>
    <string name="invite_menu">Invite</string>
    <string name="language_menu">Language</string>
    <string name="settings_menu">Settings</string>
    <string name="about_menu">About</string>
    <string name="messenger_upgrade_app">Be a Pro to unlock full version</string>
    <string name="item_basic">BASIC</string>
    <string name="item_improvements">IMPROVEMENTS</string>
    <string name="item_secret_store">SECRET</string>
    <string name="item_no_cd">non</string>
    <string name="buy_item_error">There was an error with your purchase. Please try again.</string>
    <string name="payment_error">Failure in verification of your payment.</string>
    <string name="thank_payment">Thanks for helping DotaZone Grow up!</string>
    <string name="hero_strength">STRENGTH</string>
    <string name="hero_agility">AGILITY</string>
    <string name="hero_intelligence">INTELLIGENCE</string>
    <string name="hero_meele">MELEE</string>
    <string name="rating_button_out">Close</string>
    <string name="rating_button">Rate it 5 stars</string>
    <string name="hero_ranged">RANGED</string>
    <string name="rating_messenger">Now you can study your heroes before even playing. Do not you think we deserve 5 stars?</string>
    <string name="option_yes">OK</string>
    <string name="about_show_artwork">Show your artwork to the world</string>
    <string name="about_description_artwork">Send us your artwork of Dota 2 heroes and it can appear in the splash screen with you credits.</string>
    <string name="copyright_dotazone">DotaZone is an independent application for Android and your brand and concepts are property of your owners.</string>
    <string name="copyright_valve">Dota 2 is a registered trademark of Valve Corporation. All game images and names are property of Valve and this App is not affiliated with Valve Corporation.</string>
    <string name="loading_dialog">Loading…</string>
    <string name="option_no">Cancel</string>
    <string name="splesh_button">Confirm</string>
    <string name="splesh_copyright">DOTA 2 IS A REGISTERED TRADEMARK OF VALVE CORPORATION. ALL GAME IMAGES AND NAMES ARE PROPERTY OF VALVE AND THIS APP IS NOT AFFILIATED WITH VALVE CORPORATION.</string>
    <string name="error_feed_news">Error when trying to retrieve information from the Dota 2 blog. Please try again later.</string>
    <string name="error_item_connection">Error when trying to retrieve information about Items. Please try again later.</string>
    <string name="error_hero_connection">Error when trying to retrieve information about Heroes. Please try again later.</string>
    <string name="error_conection">Maybe you are not connected to internet. Want to connect?</string>
    <string name="error_json_item">Error when trying to retrieve information about items. Try again later.</string>
    <string name="error_json_hero">Error when trying to retrieve information about heroes. Try again later.</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>Heroes</item>
        <item>Items</item>
    </string-array>

    <string name="action_settings">Settings</string>
    <string name="feed_name">News</string>
    <string name="language_choose">Choose language</string>
    <string name="idioma_language">Content Translation</string>
    <string name="hero_bio">Biography</string>
    <string name="language_change">Change language</string>
    <string name="save_settings">Save</string>
    <string name="selected_fail">select a valid option</string>
    <string name="language_description">You must restart the application. Restart now?</string>
    <string name="loading">Loading…</string>
    <string name="full_slot">Full slot</string>
    <string name="help_build_hero">Press and hold an item in the inventory for more information.</string>
    <string name="pro_account">Pro account</string>
    <string name="error_build_alert">Values ​​with a margin of error of 3% more or less.</string>
    <string name="alert_buy_buy_now">Buy now</string>
    <string name="alert_buy_description">Buy the PRO version to unlock HeroBuildPro tool and Remove ad.\n\n Want to continue?</string>
    <string name="title_activity_alert_payment">AlertPayment</string>
    <string name="hello_world">Hello world!</string>
    <string name="share_app_text"> Hey! Do you know the HeroBuild Pro tool for Dota 2? Install DotaZone App and see how your Hero grows in battles! https://play.google.com/store/apps/details?id=br.com.dotazone</string>
    <string name="upgrade">Upgrade</string>
    <string name="payment_remove_ad">Remove Ad</string>
    <string name="payment_title">Upgrade to full version and enjoy 100%</string>
    <string name="payment_redeem_code">Redeem Code</string>
    <string name="payment_londing_code">loading code…</string>
    <string name="error_payment_invalid_code">Invalid cod</string>
    <string name="payment_promotion_active">DotaZone PRO version active!</string>
    <string name="payment_messenger_unlock">HeroBuild Pro Tool unlocks</string>
    <string name="payment_error_conection">Maybe you\'re not connected, try again later.</string>
    <string name="payment_error_key_used">The key has already been used</string>
    <string name="channel">Channels</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="offline">OFFLINE</string>
    <string name="online">ONLINE</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="title_activity_video_search">VideoSearch</string>
    <string name="video_search">Video search</string>
    <string name="title_activity_youtube_play_video">YoutubePlayVideo</string>
    <string name="video_not_found">Video not found</string>
    <string name="download_video">download finalized…</string>
    <string name="APP_ID">7A1DA992</string>
    <string name="channel_nomadtv">NoMadTV</string>
    <string name="download_video_progress">download in progress…</string>
    <string name="waiting_roshan">Waiting for Roshan…</string>
    <string name="roshan_menu">Roshan</string>
    <string name="roshan_go_to_roshan">Roshan is alive. Go get it!</string>

</resources>