<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/menu_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginLeft="25dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textMenuNews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/news_menu"
            android:textColor="#FFFFFF"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/textMenuHero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/heroes_menu"
            android:textColor="#FFFFFF"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/textMenuItems"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/items_menu"
            android:textColor="#FFFFFF"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/textMenuBuild"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/build_menu"
            android:textColor="#FFFFFF"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/textMenuInvite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/invite_menu"
            android:textColor="#FFFFFF"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/textMenuLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/settings_menu"
            android:textColor="#FFFFFF"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/textMenuAbout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/about_menu"
            android:textColor="#FFFFFF"
            android:textSize="25sp" />
        <TextView
            android:id="@+id/textMenuChannel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/channel"
            android:textColor="#FFFFFF"
            android:textSize="25sp" />
    </LinearLayout>

    <ImageView
        android:layout_width="138dp"
        android:layout_height="19dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="65dp"
        android:layout_marginRight="35dp"
        android:src="@drawable/menu_steam_logo" />


    <FrameLayout
        android:id="@+id/content_drawer_list_account_premium"
        android:layout_width="fill_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#090909">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="15dp"
            android:orientation="horizontal">


            <ImageView
                android:layout_width="23dp"
                android:layout_height="28dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/icon_pro" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/pro_account"
                android:textSize="17sp"
                android:textStyle="bold" />
        </LinearLayout>


    </FrameLayout>


    <Button
        android:id="@+id/content_drawer_buy_button"
        android:layout_width="fill_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:background="#bd4a2a"
        android:text="@string/messenger_upgrade_app"
        android:textColor="@android:color/white"
        android:textSize="15sp" />

</RelativeLayout>