<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#313234">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/payment_menu_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layout_upgrade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="14dp"
                    android:layout_height="19dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/news_menu" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/upgrade"
                    android:textColor="#CECFD4"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:background="@drawable/payment_logo_dotazone" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            android:background="@drawable/payment_pro_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/payment_title"
            android:textColor="@android:color/white"
            android:textSize="15sp" />

        <RelativeLayout
            android:layout_width="330dp"
            android:layout_height="90dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/rounded_corner"
            android:orientation="vertical"
            android:padding="5dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/icon_check" />

            <TextView
                android:id="@+id/text_unlock1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:padding="5dp"
                android:text="@string/payment_remove_ad"
                android:textColor="@android:color/white" />

            <View
                android:id="@+id/line1"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/text_unlock1"
                android:layout_marginTop="10dp"
                android:background="#37383A"
                android:padding="5dp" />


            <TextView
                android:id="@+id/text_unlock2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/line1"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                android:text="@string/payment_messenger_unlock"
                android:textColor="@android:color/white" />

            <ImageView
                android:layout_width="10dp"
                android:layout_height="7.5dp"
                android:layout_below="@+id/text_unlock1"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/icon_check" />


        </RelativeLayout>


        <EditText
            android:id="@+id/payment_redeem_code"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/rounded_corner_payment_code"
            android:gravity="center"

            android:hint="@string/payment_redeem_code"
            android:inputType="number" />

        <Button
            android:id="@+id/payment_buy_button"
            android:layout_width="fill_parent"
            android:layout_height="55dp"
            android:layout_marginTop="140dp"
            android:background="@drawable/button_payment_selector"
            android:text="@string/messenger_upgrade_app"
            android:textColor="@android:color/white"
            android:textSize="15sp" />
    </LinearLayout>

    <include
        android:id="@+id/list_slidermenu"
        layout="@layout/content_drawer_list"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start" />

</android.support.v4.widget.DrawerLayout>
